# sqlite-watcher

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
src/app/: mod.rs  ui.rs
src/db/: mod.rs  schema_table.rs  sql_table.rs
