[package]
name = "sqlite-watcher"
version = "0.1.0"
edition = "2021"
description = "TUI application used to view live updates of SQLite Database"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25"
anyhow = "1.0.66"
rusqlite = { version = "0.28.0", features = ["bundled"] }
thiserror = "1.0.37"
r2d2_sqlite = "0.21.0"
r2d2 = "0.8.10"